syntax="proto3";
option go_package = "github.com/kianyari/microservice-practice/common/api";
package api;

import "google/protobuf/timestamp.proto";

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse) {}
  rpc GetTasks (GetTasksRequest) returns (GetTasksResponse) {}
  rpc CompleteTask (CompleteTaskRequest) returns (CompleteTaskResponse) {}
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse) {}
}

message CreateTaskRequest {
    int32 owner_id = 1;
    string title = 2;
    google.protobuf.Timestamp deadline = 3;
}

message CreateTaskResponse {
    string message = 1;
}

message GetTasksRequest {
    int32 owner_id = 1;
}

message GetTasksResponse {
    repeated Task tasks = 1;
    string message = 2;
}

message Task {
    int32 id = 1;
    int32 owner_id = 2;
    string title = 3;
    google.protobuf.Timestamp deadline = 4;
    string status = 5;
}

message CompleteTaskRequest {
    int32 id = 1;
    int32 owner_id = 2;
}

message CompleteTaskResponse {
    string message = 1;
}

message DeleteTaskRequest {
    int32 id = 1;
    int32 owner_id = 2;
}
message DeleteTaskResponse {
    string message = 1;
}